fix minor layout issues and only show constraints section of templates if there are any constraints to be applied. Especially important for small screens

--- a/less/components/templates.less
+++ b/less/components/templates.less
@@ -130,6 +130,10 @@
         .x-section {
             padding: 4px;
             transition: all 0.6s;
+            &:first-child {
+                padding-right: 4px;
+            }
+
         }
 
         .select-a-template {
